syntax="proto3";

option go_package="github.com/essayZW/hpcmanager/node/proto;node";

package node;

// NodeApply 数据库node_appl对应的消息映射
message NodeApply {
    int32 id = 1;
    int64 createTime = 2;
    int32 createrID = 3;
    string createrUsername = 4;
    string createrName = 5;
    int32 projectID = 6;
    int32 tutorCheckStatus = 7;
    int32 managerCheckStatus = 8;
    int32 status = 9;
    string messageTutor = 10;
    string messageManager = 11;
    int64 tutorCheckTime = 12;
    int32 tutorID = 13;
    string tutorUsername = 14;
    string tutorName = 15;
    int64 managerCheckTime = 16;
    int32 managerCheckerID = 17;
    string managerCheckerUsername = 18;
    string managerCheckerName = 19;
    int64 modifyTime = 20;
    int32 modifyUserID = 21;
    string modifyName = 22;
    string modifyUsername = 23;
    string nodeType = 24;
    int32 nodeNum = 25;
    int64 startTime = 26;
    int64 endTime = 27;
    string extraAttributes = 28;
}

// NodeDistribute 节点分配处理工单对应的消息映射
message NodeDistribute {
    int32 id = 1;
    int32 applyID = 2;
    int32 handlerFlag = 3;
    int32 handlerUserID = 4;
    string handlerUsername = 5;
    string handlerName = 6;
    int32 distributeBillID = 7;
    int64 createTime = 8;
    string extraAttributes = 9;
}

// NodeUsageTiem 机器节点机时记录
message NodeUsageTime {
    int32 id = 1;
    int32 userID = 2;
    string queueName = 3;
    double wallTime = 4;
    double gwallTime = 5;
    int64 startTime = 6;
    int64 endTime = 7;
    int64 createTime = 8;
    string extraAttributes = 9;
}
